# maia

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  aicof.yaml  docker-compose.yaml  go.mod  go.sum  llm.txt  mkdocs.yml
.agent/: patterns.md  product.md  project.md  prompt.md  state.md
.agent/rfd/: 0001-local-embedding-provider.md  0002-openai-proxy.md  0003-graph-index.md  0004-multi-tenancy.md  0005-multi-region-replication.md  0006-kubernetes-operator.md
.agent/tasks/: 0007-prd-replication-phase-3-5.md  tasks-0007-prd-replication-phase-3-5.md
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  operator.yml  release.yml  security.yml
api/openapi/: maia.yaml
cmd/maia/: main.go
cmd/maiactl/: main.go
cmd/mcp-server/: main.go
cmd/migrate/: main.go
deployments/: prometheus.yaml
deployments/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deployments/prometheus/: alerts.yaml
docs/: README.md  api-reference.md  architecture.md  audit-logging.md  cli.md  configuration.md  deployment.md  getting-started.md  index.md  inference.md  llms.txt  mcp-integration.md  monitoring.md  multi-tenancy.md  operator.md  proxy.md  requirements.txt  sdks.md
examples/basic-usage/: README.md  main.go
examples/mcp-integration/: README.md  claude_desktop_config.json
examples/multi-agent/: README.md  main.go
examples/proxy-usage/: README.md  main.go
includes/: mkdocs.md
internal/audit/: audit_test.go  logger.go  middleware.go  types.go
internal/config/: config.go  config_test.go
internal/context/: assembler.go  assembler_test.go  token.go  token_test.go
operator/: Dockerfile  Makefile  README.md  go.mod  go.sum
scripts/: backup.sh  restore.sh  scheduled-backup.sh
sdk/python/: pyproject.toml
sdk/python/maia/: __init__.py  client.py  errors.py  types.py
sdk/python/tests/: __init__.py  test_client.py  test_errors.py
(+174 files in other folders)
