[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maia-sdk"
version = "0.1.0"
description = "Python SDK for MAIA - AI-native distributed memory system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "MAIA Authors" }
]
keywords = ["maia", "memory", "llm", "ai", "context", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ar4mirez/maia"
Repository = "https://github.com/ar4mirez/maia"
Documentation = "https://github.com/ar4mirez/maia/tree/main/sdk/python"

[tool.hatch.build.targets.sdist]
include = ["/maia"]

[tool.hatch.build.targets.wheel]
packages = ["maia"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["maia"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
